fixed favgames spacing

--- a/style.css
+++ b/style.css
@@ -207,6 +207,8 @@ div.favgamesbox {
     margin: auto;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 div.favgamestext {
